--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/04-00-read-value.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/04-00-read-value.mdx
@@ -24,8 +24,6 @@ For this project, we'll use a push button to provide input to the Raspberry Pi.
 
 ### Wiring the Button
 
-![Button circuit](./images/button%20circuit.png)
-
 1. **3.3V Connection:** Connect one terminal of the push button to the 3.3V supply on your Raspberry Pi.
 2. **Pull-Down Resistor:** Connect a 10K Ω resistor between GPIO Pin 12 and a GND pin. This ensures the pin reads LOW by default.
 3. **Button to GPIO:** Connect the other terminal of the push button directly to GPIO Pin 12.
@@ -83,40 +81,45 @@ Below is the complete code, combining initialization and three separate readings
   <AccordionItem header="Full Code (C#)">
   
   ```csharp
-  using System;
   using SplashKitSDK;
-  using static SplashKitSDK.SplashKit;
+using static SplashKitSDK.SplashKit;
 
+// Initialise the GPIO system
+RaspiInit();
 
-  // Initialize the GPIO system
-  RaspiInit();
+// Define the button pin (using physical Pin 11)
+GpioPin buttonPin = GpioPin.Pin11;
+GpioPin ledPin = GpioPin.Pin7;
 
-  // Define the button pin (using physical Pin 12)
-  Pins buttonPin = Pins.Pin12;
+// Set the button pin to input mode (GPIO_INPUT)
+RaspiSetMode(buttonPin, GpioPinMode.GpioInput);
+RaspiSetMode(ledPin, GpioPinMode.GpioOutput);
 
-  // Set the button pin to input mode (GPIO_INPUT)
-  RaspiSetMode(buttonPin, PinModes.GpioInput);
+// Set the button pin to use an internal pull-down resistor
+RaspiSetPullUpDown(buttonPin, PullUpDown.PudDown);
 
-  // First reading
-  WriteLine("Press your button, then hit Enter to record the reading:");
-  ReadLine();  // Wait for user to press Enter
-  PinValues reading1 = RaspiRead(buttonPin);
-  WriteLine("Reading 1: " + reading1);
+// First reading
+WriteLine("Press and hold your button down, then hit Enter to record the reading:");
+ReadLine();  // Wait for user to press Enter
+GpioPinValue reading1 = RaspiRead(buttonPin);
+WriteLine("Reading 1: " + reading1);
+RaspiWrite(ledPin, reading1);
+// Second reading
+WriteLine("Release your button now so it is not pressed, then hit Enter:");
+ReadLine();  // Wait for another press
+GpioPinValue reading2 = RaspiRead(buttonPin);
+WriteLine("Reading 2: " + reading2);
+RaspiWrite(ledPin, reading2);
 
-  // Second reading
-  WriteLine("Press your button again, then hit Enter:");
-  ReadLine();  // Wait for another press
-  PinValues reading2 = RaspiRead(buttonPin);
-  WriteLine("Reading 2: " + reading2);
+// Third reading
+WriteLine("Press your button once and release it, then hit Enter:");
+ReadLine();  // Wait for another press
+GpioPinValue reading3 = RaspiRead(buttonPin);
+WriteLine("Reading 3: " + reading3);
+RaspiWrite(ledPin, reading3);
 
-  // Third reading
-  WriteLine("Press your button once more, then hit Enter:");
-  ReadLine();  // Wait for another press
-  PinValues reading3 = RaspiRead(buttonPin);
-  WriteLine("Reading 3: " + reading3);
-
-  // Clean up the GPIO system
-  RaspiCleanup();
+// Clean up the GPIO system
+RaspiCleanup();
 
 ````
 
