Add note with link to guided activity

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/0-panorama/8-gpio-pins.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/0-panorama/8-gpio-pins.mdx
@@ -17,6 +17,10 @@ TODO: Overview of Raspberry Pi GPIO Pins:
 
 To get started with using the Raspberry functions to write and read GPIO pin values, you can use the following wiring diagram to connect an LED to Pin 11 and connect a button to Pin 13.
 
+:::note
+You can check out [Step 2 - Initialise GPIO Pin](/book/part-1-instructions/1-sequence-and-data/1-tour/03-01-prepare-gpio-pins) from the guided activity for more information about setting up the button.
+:::
+
 ![Image showing wiring diagram using an LED and a button](./images/read-button-circuit.png)
 <div class="caption">Image created with <a href="https://fritzing.org/">Fritzing</a></div>
 
