Update dot points on GPIO Pins overview page

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/0-panorama/8-gpio-pins.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/0-panorama/8-gpio-pins.mdx
@@ -9,9 +9,9 @@ TODO: Overview of Raspberry Pi GPIO Pins:
 
 - Refer back to [Use Your Raspberry Pi](/book/part-0-getting-started/2-computer-use/1-tour/3-2-setup-raspberry) - give summary of content on that page maybe?
 - Refer back to [Machine Code](/book/part-0-getting-started/1-digital-realities/2-trailside/4-machine-code) - discuss binary values
-- Add diagrams similar to method call, but for setting mode
-- Include tables for relevant Pin Modes and Pin Values?
-- Add diagrams similar to method call, but for RaspiWrite and RaspiRead
+- Include tables for relevant Pin Modes and Pin Values? (Or just links to splashkit for easier maintainability?)
+- Links to GPIO SplashKit types: [Gpio Pin](https://splashkit.io/api/types/#gpio-pin), [Gpio Pin Mode](https://splashkit.io/api/types/#gpio-pin-mode), [Gpio Pin Value](https://splashkit.io/api/types/#gpio-pin-value), and maybe [Pull Up Down](https://splashkit.io/api/types/#pull-up-down)?
+- Maybe add diagrams similar to method call, but for RaspiWrite and RaspiRead - not sure if needed.
 
 ## Example
 
