Update to include "digital" in P1C1 GPIO guided activity

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/03-00-button-press-counter.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/03-00-button-press-counter.mdx
@@ -7,7 +7,7 @@ sidebar:
 
 import { Accordion, AccordionItem } from "accessible-astro-components";
 
-In this guided activity, you'll learn how you can use SplashKit to read the value of a GPIO pin on your Raspberry Pi, using a simple circuit with a push button.
+In this guided activity, you'll learn how you can use SplashKit to read a **digital** value from a GPIO pin on your Raspberry Pi, using a simple circuit with a push button.
 
 When you run the program, you will be prompted 3 times to press your button (or you can choose not to press it), and then hit Enter to record the value of the pin connected to the button. The pin value will then be converted to an integer to print the number of times the button was pressed.
 
