Update Raspberry Pi pages for Part 1, Chapter 1

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/3-explore/03-0-explore.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/3-explore/03-0-explore.mdx
@@ -8,4 +8,4 @@ Having explored this leg of the journey you are now approaching a rest stop and 
 - A [saving targets calculator](/book/part-1-instructions/1-sequence-and-data/3-explore/03-1-calculator).
 - A [music player](/book/part-1-instructions/1-sequence-and-data/3-explore/03-2-media-player) to load and play audio.
 - [Draw a scene](/book/part-1-instructions/1-sequence-and-data/3-explore/03-3-drawing) using SplashKit graphics.
-- [Binary Calculator](/book/part-1-instructions/1-sequence-and-data/3-explore/04-4-binary-calculator/) using physical buttons on a Raspberry Pi.
+- A [Binary Converter](/book/part-1-instructions/1-sequence-and-data/3-explore/03-4-binary-converter/) using a physical button connected to a Raspberry Pi.
