Correct wall data type for calculated house drawing

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/02-04-house-calc.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/02-04-house-calc.mdx
@@ -12,7 +12,7 @@ Lastly, let's look at adding some constants and variables to make this more dyna
 ![House plan illustration](./images/house-plan-calc.png)
 
 1. Start with positioning the walls. Determine what we need to calculate.
-   
+
     We will need to determine:
 
     - the screen size. Create constants for `SCREEN_WIDTH` and `SCREEN_HEIGHT`.
@@ -47,7 +47,7 @@ Lastly, let's look at adding some constants and variables to make this more dyna
 
       int houseSize;
       string userInput;
-      double wallX, wallY;
+      int wallX, wallY;
 
       WriteLine("Enter the size of the house: ");
       userInput = ReadLine();
