Fix CodeActivity component path + fields

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/01-01-read-name.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/01-01-read-name.mdx
@@ -4,7 +4,7 @@ sidebar:
   label: " - Read the user's name"
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
-import CodeActivity from './src/components/CodeActivity.astro'
+import CodeActivity from '/src/components/CodeActivity.astro'
 
 Best first step is to build something small, then we can grow the program our from that start. Let's just get the first two messages handled - reading the user's name and displaying it. So we want to see this at the end:
 
@@ -90,7 +90,7 @@ Hi Andrew.
     :::
 
 
-    <CodeActivity title="Field Guide/Sequence and Data/Simple Calculator/Read name">
+    <CodeActivity header="Try it out!" projectName="Field Guide/Sequence and Data/Simple Calculator/Read name">
     ```c++ {"userCode":10-10}
     #include "splashkit.h"
 
