--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/02-02-drawing.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/02-02-drawing.mdx
@@ -4,7 +4,7 @@ sidebar:
   label: " - Drawing Shapes"
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
-import CodeActivity from './src/components/CodeActivity.astro'
+import CodeActivity from '/src/components/CodeActivity.astro'
 
 With the window appearing, the next step is to draw some shapes. To start, let's get the hill drawing.
 
@@ -89,7 +89,7 @@ For this program we are just wanting to draw some fixed shapes, so we can tolera
 
 :::
 
-    <CodeActivity title="Field Guide/Sequence and Data/House Drawing/Drawing Shapes">
+    <CodeActivity header="Try it out!" projectName="Field Guide/Sequence and Data/House Drawing/Drawing Shapes">
     ```c++ {8,11}
     #include "splashkit.h"
 
