--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/01-01-read-name.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/01-01-read-name.mdx
@@ -19,14 +19,14 @@ Hi Andrew.
     ```zsh
     # Move you your code projects folder
     cd ~/Documents/Code # or cd /c/Users/andrew/Documents/Code
-    
+
     # Create and move into a folder for the project
     mkdir TravelCalculator
     cd TravelCalculator
 
     # Create a blank dotnet project
     dotnet new console
-    
+
     # Add the SplashKit library
     dotnet add package splashkit
 
@@ -59,7 +59,7 @@ Hi Andrew.
 
 3. Add the code to create a `name` variable - then we can think about how we use this.
 4. Review the messages we want to output. To start we want to output the message `"What is your name: "`, read the text and user enters, then output a blank line and the greeting text `"Hi "` followed by the user's name.
-  
+
     Looking back at the [terminal methods](/book/part-1-instructions/1-sequence-and-data/0-panorama/6-terminal-method-to-use), we have methods to output text (`Write` and `WriteLine`), and read text from the user (`ReadLine`). Use these to display the prompt, and output the required messages.
 
     <Accordion>
@@ -90,7 +90,7 @@ Hi Andrew.
     :::
 
 
-    <CodeActivity header="Try it out!" projectName="Field Guide/Sequence and Data/Simple Calculator/Read name">
+    <CodeActivity header="Try it out!" projectName="Sequence and Data/Simple Calculator/Read Name">
     ```c++ {"userCode":10-10}
     #include "splashkit.h"
 
