--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/02-02-drawing.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/1-tour/02-02-drawing.mdx
@@ -89,7 +89,7 @@ For this program we are just wanting to draw some fixed shapes, so we can tolera
 
 :::
 
-    <CodeActivity header="Try it out!" projectName="Field Guide/Sequence and Data/House Drawing/Drawing Shapes">
+    <CodeActivity header="Try it out!" projectName="Sequence and Data/House Drawing/Drawing Shapes">
     ```c++ {8,11}
     #include "splashkit.h"
 
