--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-trailside/06-type.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-trailside/06-type.mdx
@@ -4,7 +4,7 @@ title: "Type"
 import { YouTube } from 'astro-embed';
 
 In order to build programs, we need ways of making sense of data within the computer. 
-Looking back to the chapter on [Digital Realities](/book/part-0-getting-started/1-digital-realities/0-overview), remember that computers are electronic devices and that everything else on top of that is an **abstraction** that we build. So, how do the tools we have allow us to use different kinds of data within our programs?
+Looking back to the chapter, remember that computers are electronic devices and that everything else on top of that is an **abstraction** that we build. So, how do the tools we have allow us to use different kinds of data within our programs?
 
 The answer is that programming languages provide us with a mechanism to assign a **type** to different pieces of data.
 All values within a program have a type. The type indicates how the data stored in the computer's memory should be interpreted by the program, and how it can be used.
