Progress sequence and data overview and intro tour

--- a/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-intro-tour/2-code.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence-and-data/2-intro-tour/2-code.mdx
@@ -1,8 +1,7 @@
 ---
-title: Code?
+title: Code
 ---
 import { YouTube } from 'astro-embed';
-
 
 In this video we look at the different aspects that we have in code.
 
